Fix overflowing sidebar nav items

--- a/src/components/NavMenu/NavHeader/Header.css
+++ b/src/components/NavMenu/NavHeader/Header.css
@@ -52,7 +52,7 @@ h1 {
 
 .nav-button {
     text-align: center;
-    width: 100%;
+    max-width: 100%;
     padding: 1rem;
     display: block;
     text-decoration: none;
